bk_ida/gccida/c3/schedule_block
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_block/src/haifa-sched.c:2124:4: error: expected ';' after expression
rtx v15; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_block/src/haifa-sched.c:2124:5: error: use of undeclared identifier 'v15'
rtx v15; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_block/src/haifa-sched.c:2137:31: error: unknown type name 'rtx'
int ( *reorder)( FILE *, int, rtx *, int *, int); // rbp 
                              ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_block/src/haifa-sched.c:2146:32: error: unknown type name 'rtx'
int ( *reorder2)( FILE *, int, rtx *, int *, int); // rbp 
                               ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_block/src/haifa-sched.c:2150:6: error: use of undeclared identifier 'v41'
rtx *v41; // rdx 
     ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_block/src/haifa-sched.c:2153:4: error: expected ';' after expression
rtx v44; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_block/src/haifa-sched.c:2153:5: error: use of undeclared identifier 'v44'
rtx v44; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_block/src/haifa-sched.c:2164:4: error: expected ';' after expression
rtx v55; // r12 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_block/src/haifa-sched.c:2164:5: error: use of undeclared identifier 'v55'
rtx v55; // r12 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_block/src/haifa-sched.c:2165:4: error: expected ';' after expression
rtx v56; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_block/src/haifa-sched.c:2165:5: error: use of undeclared identifier 'v56'
rtx v56; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_block/src/haifa-sched.c:2170:4: error: expected ';' after expression
rtx v61; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_block/src/haifa-sched.c:2170:5: error: use of undeclared identifier 'v61'
rtx v61; // r15 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_block/src/haifa-sched.c:2171:4: error: expected ';' after expression
rtx v62; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_block/src/haifa-sched.c:2171:5: error: use of undeclared identifier 'v62'
rtx v62; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_block/src/haifa-sched.c:2173:4: error: expected ';' after expression
rtx v64; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_block/src/haifa-sched.c:2173:5: error: use of undeclared identifier 'v64'
rtx v64; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_block/src/haifa-sched.c:2175:4: error: expected ';' after expression
rtx v66; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_block/src/haifa-sched.c:2175:5: error: use of undeclared identifier 'v66'
rtx v66; // rbx 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/schedule_block/src/obj/haifa-sched.o] Error 1
